--- a/chatproject/chat/templates/chat/about.html
+++ b/chatproject/chat/templates/chat/about.html
@@ -1,3 +1,5 @@
-{% extends "chat/base.html" %} {% block title %}O nás{% endblock %} {% block content %}
-<p>Tato aplikace je ukázkový projekt Django chatu.</p>
+{% extends "chat/base.html" %}
+{% block title %}About Us{% endblock %}
+{% block content %}
+<p>This application is a sample Django chat project.</p>
 {% endblock %}
