--- a/chatproject/chat/templates/chat/chat.html
+++ b/chatproject/chat/templates/chat/chat.html
@@ -1,3 +1,5 @@
-{% extends "base.html" %} {% block title %}Úvodní stránka{% endblock %} {% block content %}
-<p>Vítej v live chat aplikaci! Tato stránka dědí z base.html.</p>
+{% extends "base.html" %}
+{% block title %}Homepage{% endblock %}
+{% block content %}
+<p>Welcome to the live chat application! This page inherits from base.html.</p>
 {% endblock %}
