--- a/chatproject/chat/templates/chat/home.html
+++ b/chatproject/chat/templates/chat/home.html
@@ -1,3 +1,5 @@
-{% extends "chat/base.html" %} {% block title %}Home{% endblock %} {% block content %}
-<p>Vítej na úvodní stránce!</p>
+{% extends "chat/base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<p>Welcome to the homepage!</p>
 {% endblock %}
