--- a/chatproject/chat/templates/chat/register.html
+++ b/chatproject/chat/templates/chat/register.html
@@ -1,7 +1,9 @@
-{% extends "chat/base.html" %} {% block title %}Registrace{% endblock %} {% block content %}
-<h2>Registrovat se</h2>
+{% extends "chat/base.html" %}
+{% block title %}Register{% endblock %}
+{% block content %}
+<h2>Register</h2>
 <form method="post">
   {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Registrovat</button>
+  <button type="submit">Register</button>
 </form>
 {% endblock %}
