--- a/chatproject/chat/templates/chat/room_list.html
+++ b/chatproject/chat/templates/chat/room_list.html
@@ -1,5 +1,7 @@
-{% extends "chat/base.html" %} {% block title %}Místnosti{% endblock %} {% block content %}
-<h2>Seznam místností</h2>
+{% extends "chat/base.html" %}
+{% block title %}Rooms{% endblock %}
+{% block content %}
+<h2>Room List</h2>
 
 {% if user.is_authenticated %}
 <a
@@ -14,7 +16,7 @@
     border-radius: 5px;
   "
 >
-  + Vytvořit novou místnost
+  + Create New Room
 </a>
 {% endif %}
 
@@ -22,7 +24,7 @@
   {% for room in rooms %}
   <li><a href="{% url 'room-detail' slug=room.slug %}">{{ room.name }}</a></li>
   {% empty %}
-  <li>Žádné místnosti nejsou dostupné.</li>
+  <li>No rooms available.</li>
   {% endfor %}
 </ul>
 {% endblock %}
